# hakaton

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  README.md  geo-audit-composio-dev.md  geo-audit-merge-mcp.md
.cursor/: mcp.json
.cursor/hooks/state/: continual-learning-index.json  continual-learning.json
.cursor/skills/use-benchcontrol/: SKILL.md
.github/workflows/: ci.yml  deploy-mcp-servers.yml  run-benchmark.yml  scheduled-benchmarks.yml
aioa/: .env.example  .gitignore  AnalyzeMVP.md  Model and Search Engine Prompts  README.md  pyproject.toml
aioa/config/: competitors.json  prompts_v1.json  scoring_matrix.json  terms_v1.json
aioa/data/: full_results_b471484a.json  orchestrator_test_output.json  report_2c0b3fc0-d4b0-4ae4-bdc7-bf4d42964b4f.json  report_afdd5566-1624-4ac6-bb61-dfb04946bf02.json  report_b10a272a-b555-45f5-98ad-61e898839f12.json  report_c81afc16-0feb-44ca-82ea-64f097049ece.json  seo_only_output.json
aioa/data/live_test/: report_live-test-001.json
aioa/src/: input_layer.py  main.py  models.py  orchestrator.py  output.py  pipeline.py  search.py  store.py
aioa/src/skills/: competitor_comparison.py  gap_analysis.py  mention_detection.py  rank_extraction.py  score_calculation.py
aioa/src/stores/: __init__.py  json_store.py  sqlite_store.py
aioa/tests/: test_input_layer.py  test_models.py  test_orchestrator.py  test_output.py  test_pipeline.py  test_search.py  test_security.py  test_skills.py  test_store.py
docs/: claude-project-instructions.md
docs/audits/2026-03-17-composio-dev/: arcade-evidence.json  report.md  (+2 more)
docs/brainstorms/: 2026-03-17-arcade-page-ranking-skills-brainstorm.md  2026-03-17-geo-audit-deterministic-checks-brainstorm.md  2026-03-17-geo-audit-parallel-exploration-brainstorm.md
docs/handoffs/: 2026-03-19-implementation-prompt.md  2026-03-19-project-exploration-handoff.md  2026-03-19-server-merge-and-output-improvements.md
docs/ops/: github-setup.md  local-development.md
docs/plans/: 2026-03-17-arcade-page-ranking-check-plan.md  2026-03-17-geo-audit-deterministic-mcp-plan.md  2026-03-17-geo-audit-parallel-exploration-plan.md  2026-03-18-aioa-review-remediation-plan.md  2026-03-18-benchmark-control-plane-implementation-plan.md  2026-03-18-geo-compare-tool-plan.md  2026-03-18-unified-benchcontrol-cleanup-design.md
run-specs/: README.md
run-specs/examples/: arcade-geo-compare.json  composio-full.json  composio-geo.json
run-specs/scheduled/: composio-full.json
tools/benchmark_control_arcade/: pyproject.toml
tools/benchmark_control_arcade/prompts/: geo_compare_output_schema.json  geo_compare_system.md  geo_site_audit_output_schema.json  geo_site_audit_system.md
tools/benchmark_control_arcade/prompts/archived/: geo_compare_output_schema.json  geo_compare_system.md  geo_site_audit_output_schema.json  geo_site_audit_system.md
tools/benchmark_control_arcade/src/benchmark_control_arcade/: __init__.py  aioa_runner.py  compare.py  config.py  geo_compare_runner.py  geo_runner.py  github_client.py  history.py  history_layout.py  publisher.py  run_models.py  secrets_guard.py  server.py  workflow_entrypoint.py
tools/benchmark_control_arcade/tests/: test_aioa_runner.py  test_compare.py  test_config.py  test_geo_compare_runner.py  test_geo_runner.py  test_github_client.py  test_history.py  test_history_layout.py  test_publisher.py  test_run_models.py  test_security.py  test_server.py  test_workflow_entrypoint.py
tools/benchmark_control_arcade/tests/fixtures/: geo_evidence.json
tools/geo_audit_arcade/: pyproject.toml
tools/geo_audit_arcade/src/geo_audit_arcade/: .env.example  __init__.py  extraction.py  fetching.py  models.py  selection.py  server.py  validation.py
tools/geo_audit_arcade/src/geo_audit_arcade/tools/: collect_geo_evidence.py  run_geo_audit.py  run_geo_compare.py
tools/geo_audit_arcade/tests/: test_extraction.py  test_run_geo_audit.py  test_run_geo_compare.py  test_selection.py  test_server.py  test_validation.py
tools/geo_audit_local_mcp/: README.md  pyproject.toml
tools/geo_audit_local_mcp/src/geo_audit_local_mcp/: __init__.py  app.py  extraction.py  fetching.py  models.py  validation.py
tools/geo_audit_local_mcp/src/geo_audit_local_mcp/tools/: collect_geo_evidence.py  validate_geo_audit_claims.py
tools/geo_audit_local_mcp/tests/: test_app.py  test_collect_geo_evidence.py  test_extraction.py  test_models.py  test_selection.py  test_validate_geo_audit_claims.py  test_validation.py
tools/geo_audit_local_mcp/tests/fixtures/: composio-sample.json  homepage.html  hub-page.html  no-metadata.html  robots-with-sitemap.txt  robots.txt  sample-llms.txt  sample-sitemap.xml  with-jsonld.html
(+5 files in other folders)
