[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geo-audit-arcade"
version = "0.3.0"
description = "Arcade MCP server for deterministic GEO evidence collection and claim validation"
requires-python = ">=3.10"
dependencies = [
    "arcade-mcp-server>=1.11.1,<2.0.0",
    "anthropic>=0.40.0,<1.0.0",
    "httpx>=0.27.2,<1.0.0",
    "beautifulsoup4",
    "lxml",
    "pydantic>=2.0.0",
]

[[project.authors]]
name = "Arcade"
email = "dev@arcade.dev"

[project.optional-dependencies]
dev = [
    "arcade-mcp[all]>=1.8.2,<2.0.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.11.1",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.7.4",
]

[project.entry-points.arcade_toolkits]
toolkit_name = "geo_audit_arcade"

[tool.hatch.build.targets.wheel]
packages = ["src/geo_audit_arcade"]

[tool.ruff]
target-version = "py310"
line-length = 100
fix = true

[tool.ruff.lint]
select = ["I", "E", "W", "F", "UP", "B", "SIM", "C4"]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["S101", "E501"]
"src/geo_audit_arcade/validation.py" = ["E501", "E402"]
"src/geo_audit_arcade/models.py" = ["E501"]
"src/geo_audit_arcade/tools/collect_geo_evidence.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
