[project]
name = "geo-audit-local-mcp"
version = "0.1.0"
description = "Local deterministic MCP server for geo-site-audit evidence collection and claim validation"
requires-python = ">=3.10"
dependencies = [
    "arcade-mcp-server>=1.4.0,<2.0.0",
    "httpx",
    "beautifulsoup4",
    "lxml",
    "pydantic",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/geo_audit_local_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project.scripts]
geo-audit-local-mcp = "geo_audit_local_mcp.app:main"
